--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ div.borderBottom {
   text-align: center;
 }
 
-#userinput {
+#name, #country, #budget, #goal, #category {
   width: 50%;
   padding: 10px;
   border-radius: 5px;
@@ -67,4 +67,9 @@ div.borderBottom {
 
 input:hover {
   opacity: 1;
+}
+ 
+.campaign-input {
+  display: flex;
+  flex-direction: column;
 }
